--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,1 +1,25 @@
-.keep
+<div class="nav-container">
+  <div class="navbar">
+    <div class="logo">
+      <!-- logo -->
+    </div>
+    <div class="btn-containers">
+      <div>
+        <ul class="nav-btns">
+          <li class="nav-btn">Browse Gear</li>
+          <%= link_to new_gear_path do %>
+            <li class="nav-btn">
+              List Gear
+            </li>
+          <% end %>
+          <li class="nav-btn">My Rentals</li>
+        </ul>
+      </div>
+      <div class="avatar">
+        <div class="avatar">
+          <!-- avatar image -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
