added category to gears table

--- a/app/views/gears/newgear.html.erb
+++ b/app/views/gears/newgear.html.erb
@@ -7,7 +7,7 @@
       <h1>Post your Listing</h1>
     </div>
     <div class="listing-form">
-      <%= simple_form_for @rental do |f| %>
+      <%= simple_form_for @gear do |f| %>
         <%= f.input :brand %>
         <%= f.input :model %>
         <%= f.input :description %>
