added show page and removed newgear page

--- a/app/views/gears/new.html.erb
+++ b/app/views/gears/new.html.erb
@@ -1,6 +1,6 @@
-<div>
+<div class="">
   <div class="listing-images">
-    <!--carousel image-->
+    # carousel image
   </div>
   <div class="rental-details">
     <div class="create-banner">
@@ -11,7 +11,8 @@
         <%= f.input :brand %>
         <%= f.input :model %>
         <%= f.input :description %>
-        <%= f.input :price_per_night %>
+        <%= f.input :category %>
+        <%= f.input :price_per_day %>
         <%= f.submit %>
       <% end %>
     </div>
