added new and edit form for new listing

--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -7,7 +7,7 @@
       <div>
         <ul class="nav-btns">
           <li class="nav-btn">Browse Gear</li>
-          <%= link_to new_gear_path do %>
+          <%= link_to dashboard_path do %>
             <li class="nav-btn">
               List Gear
             </li>
