--- a/app/views/gears/show.html.erb
+++ b/app/views/gears/show.html.erb
@@ -1,8 +1,11 @@
-<h1>Gear List</h1>
 <div>
+  <h1>Gear List</h1>
   <div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <% Gears.each do |gear| %>
+      <%= gear.brand %>
+      <%= gear.model %>
+      <%= gear.category %>
+      <%= gear.description %>
+    <% end %>
   </div>
 </div>
