added rental index page

--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -12,9 +12,9 @@
           <%= link_to dashboard_path do %>
             <li class="nav-btn">List Gear</li>
           <% end %>
-          <%#= link_to dashboard_path do (should link to the rentals index page)%> 
+          <%= link_to rented_path do %>
             <li class="nav-btn">My Rentals</li>
-            <%# <% end %> %>
+          <% end %>
         </ul>
       </div>
       <div class="avatar">
