start of dropdown navbar, changed gear show page and index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,14 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+
+    <script>
+      // avatar navbar menu
+      const avatar = document.getElementById("profile-avatar");
+      const dropdown = document.getElementById("avatar-drop-down");
+      avatar.addEventListener("click", (e) => {
+        dropdown.classList.toggle(".show");
+      });
+    </script>
   </body>
 </html>
