--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -29,3 +29,23 @@
   display: flex;
   width: 50%;
 }
+
+.show {
+  display: block;
+}
+
+.avatar-drop-down {
+  position: relative;
+  display: inline-block;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.avatar-icon {
+  list-style: none;
+  float: right;
+  i {
+    right: 16px;
+  }
+}
