--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,3 +1,4 @@
+<%# nav bar %>
 <div class="nav-container">
   <div class="navbar">
     <%= link_to root_path do%>
@@ -17,8 +18,8 @@
           <% end %>
         </ul>
       </div>
-      <div class="avatar">
-        <div class="avatar">
+      <div class="avatar" id="profile-avatar">
+        <div class="avatar-pic">
           <!-- avatar image -->
         </div>
       </div>
