--- a/app/views/gears/index.html.erb
+++ b/app/views/gears/index.html.erb
@@ -1,1 +1,11 @@
-# equipment index page
+<div>
+  <h1>Gear List</h1>
+  <div>
+    <% @gears.each do |gear| %>
+      <%= gear.brand %>
+      <%= gear.model %>
+      <%= gear.category %>
+      <%= gear.description %>
+    <% end %>
+  </div>
+</div>
