--- a/app/views/gears/show.html.erb
+++ b/app/views/gears/show.html.erb
@@ -1,11 +1,13 @@
 <div>
-  <h1>Gear List</h1>
-  <div>
-    <% Gears.each do |gear| %>
-      <%= gear.brand %>
-      <%= gear.model %>
-      <%= gear.category %>
-      <%= gear.description %>
-    <% end %>
+  <div class="show-images">
+    <%= image_tag %>
+  </div>
+  <div class="show-info">
+    <h2>@gear.brand</h2>
+    <h3>@gear.model</h3>
+    <h3>@gear.category</h3>
+    <p>@gear.description</p>
+    <p>@gear.price_per_day</p>
   </div>
 </div>
+
