fix some code on rentals

--- a/app/assets/stylesheets/components/_form-inputs.scss
+++ b/app/assets/stylesheets/components/_form-inputs.scss
@@ -12,3 +12,12 @@
   top: 600px;
   left: 50px;
 }
+
+.form-links {
+  position:absolute;
+  top: 650px;
+  left: 50px;
+  a {
+  color: white;
+}
+}
