--- a/app/views/gears/dashboard.html.erb
+++ b/app/views/gears/dashboard.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
-	<h1>SportBnB</h1>
+	<h2>What sports gear would you like to rent?</h2>
 	<ul class="categories">
 		<% Gear::CATEGORIES.each do |category| %>
 			<%= link_to gears_path(category: category[:name]) do %>
-				<div class="category" style="background-image: linear-gradient(to right, rgba(1, 1, 2, 0.14), rgba(128, 128, 128, 0.52)), url(<%= category[:photo] %>)">
-					<li><%= category[:name] %></li>
+				<div class="category" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.55), rgba(101, 24, 7, 0.19)), url(<%= category[:photo] %>)">
+					<li><h2><%= category[:name] %></h2></li>
 				</div>
 			<% end %>
 		<% end %>
