changed form category input to a dropdown

--- a/app/views/gears/show.html.erb
+++ b/app/views/gears/show.html.erb
@@ -1,13 +1,14 @@
-<div>
+<div class="show-body">
   <div class="show-images">
     <%= image_tag %>
   </div>
   <div class="show-info">
-    <h2>@gear.brand</h2>
-    <h3>@gear.model</h3>
-    <h3>@gear.category</h3>
-    <p>@gear.description</p>
-    <p>@gear.price_per_day</p>
+    <h2><%= @gear.brand %></h2>
+    <h3><%= @gear.model %></h3>
+    <h3><%= @gear.category %></h3>
+    <p><%= @gear.description %></p>
+    <p><%= @gear.price_per_day %></p>
   </div>
+  <%#= link_to "Rent Now", %>
 </div>
 
