Added gear view and css components

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,5 @@
 @import "pages/index";
 @import "components/banner";
 @import "components/form-inputs";
-@import "components/card-launch-page"
+@import "components/card-launch-page";
+@import "gears/import";
