--- a/app/views/gears/index.html.erb
+++ b/app/views/gears/index.html.erb
@@ -1,1 +1,21 @@
-# equipment index page
+<div class="my-grid">
+  <div class="left-wrap">
+    <div class="gender-filter">
+      <p>MY GENDER FILTER</p>
+    </div>
+    <div class="color-filter">
+      <p>MY COLOR FILTER</p>
+    </div>
+    <div class="size-filter">
+      <p>MY SIZE FILTER</p>
+    </div>
+  </div>
+  <div class="row right-wrap">
+      <% @gears.each do |gear| %>
+    <%#= link_to "click me", gear_path(gear), class: 'gear-card-holder'  %>
+      <div class="gear-card col-4">
+        <%= render "gear-card", gear: gear %>
+      </div>
+      <% end %>
+  </div>
+</div>
