--- a/app/views/gears/_form.html.erb
+++ b/app/views/gears/_form.html.erb
@@ -2,7 +2,7 @@
         <%= f.input :brand %>
         <%= f.input :model %>
         <%= f.input :description %>
-        <%= f.input :category %>
+        <%= f.input :category, collection: ["Skiing", "Snowboarding", "Basketball", "Tennis", "Soccer", "Flag Football", "Hiking", "Rock Climbing", "Golf"].sort, input_html: { multiple: false } %>
         <%= f.input :price_per_day %>
         <%= f.submit %>
       <% end %>
