--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,16 @@
 // Import page-specific CSS files here.
 @import "home";
 @import "new_gear";
+
+body {
+	margin: 0px auto;
+	background-color: #ffffff;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+li {
+	list-style: none;
+}
