--- a/app/views/gears/index.html.erb
+++ b/app/views/gears/index.html.erb
@@ -13,7 +13,7 @@
   <div class="row right-wrap">
       <% @gears.each do |gear| %>
     <%#= link_to "click me", gear_path(gear), class: 'gear-card-holder'  %>
-      <div class="gear-card col-4">
+      <div class="gear-card col-4 mb-3">
         <%= render "gear-card", gear: gear %>
       </div>
       <% end %>
