--- a/app/views/gears/show.html.erb
+++ b/app/views/gears/show.html.erb
@@ -1,6 +1,6 @@
 <div>
   <div class="show-images">
-    <%= image_tag %>
+    <%#= image_tag %>
   </div>
   <div class="show-info">
     <h2>@gear.brand</h2>
