Updated css and navbar styling

--- a/app/assets/stylesheets/components/_card-category.scss
+++ b/app/assets/stylesheets/components/_card-category.scss
@@ -26,8 +26,7 @@
 	align-items: center;
 	padding: 30px 30px;
 	height: 140px;
-	border-radius: 3%;
-	box-shadow: 2px 2px 4px grey;
+	box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
 .category > li {
