--- a/app/views/components/_navbar.html.erb
+++ b/app/views/components/_navbar.html.erb
@@ -1,28 +1,31 @@
-<%# nav bar %>
-<div class="nav-container">
-  <div class="navbar">
-    <%= link_to root_path do%>
-      <div class="logo">
-        <!-- logo -->
-      </div>
-    <% end %>
-    <div class="btn-containers">
-      <div>
-        <ul class="nav-btns">
-          <li class="nav-btn">Browse Gear</li>
-          <%= link_to dashboard_path do %>
-            <li class="nav-btn">List Gear</li>
-          <% end %>
-          <%= link_to rented_path do %>
-            <li class="nav-btn">My Rentals</li>
-          <% end %>
-        </ul>
-      </div>
-      <div class="avatar" id="profile-avatar">
-        <div class="avatar-pic">
-          <!-- avatar image -->
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <%= link_to root_path, class: "navbar-brand" do %>
+    <strong>// SPORTS BNB</strong>
+  <% end %>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <%= link_to "Browse", root_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "List Gear", dashboard_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "My Rentals", rented_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item dropdown">
+        <%= image_tag "avatar.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <%= link_to "My Rentals", rented_path, class: "dropdown-item" %>
+          <%= link_to "Another action", "#", class: "dropdown-item" %>
         </div>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </div>
