added styling to gear view

--- a/app/assets/stylesheets/gears/_index.scss
+++ b/app/assets/stylesheets/gears/_index.scss
@@ -5,16 +5,17 @@
 
 
   .left-wrap {
-    width: 30vw;
-    background-color: lightgreen;
+    width: 20vw;
+    border: lightgrey 1px solid;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     height: 80vh;
+    padding-left: 30px;
   }
 
   .right-wrap {
-    width: 60vw;
+    width: 50vw;
   }
 
   .gear-card{
@@ -23,4 +24,8 @@
 
     }
   }
+}
+
+.size > input {
+  display: inline;
 }
