--- a/app/assets/stylesheets/components/_card-gear.scss
+++ b/app/assets/stylesheets/components/_card-gear.scss
@@ -1,8 +1,7 @@
 .card-gear {
   overflow: hidden;
   background: white;
-  border-radius: 3%;
-  box-shadow: 2px 2px 4px grey;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
 .card-gear > img {
@@ -12,14 +11,12 @@
 }
 
 .card-gear h2 {
-  padding: 6px 6px;
   font-size: 16px;
   font-weight: bold;
   margin: 0;
 }
 
 .card-gear p {
-  padding: 0px 6px;
   font-size: 12px;
   opacity: .7;
   margin: 0;
@@ -33,3 +30,19 @@
   align-items: flex-end;
   position: relative;
 }
+
+.card-gear-infos .card-gear-user {
+  position: absolute;
+  right: 16px;
+  top: -20px;
+  width: 40px;
+}
+
+.card-gear-user .avatar-bordered {
+  width: 80px;
+  height: 40px;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
+}
+
