--- a/app/views/gears/new.html.erb
+++ b/app/views/gears/new.html.erb
@@ -1,7 +1,5 @@
-<div class="">
-  <div class="listing-images">
-    # carousel image
-  </div>
+
+<div class="container">
   <div class="rental-details">
     <div class="create-banner">
       <h1>Post your Listing</h1>
