Updated sign in page styling...some of it

--- a/app/views/gears/index.html.erb
+++ b/app/views/gears/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2>Rent Snowboarding Gear</h2>
   <div class="my-grid">
     <div class="left-wrap">
       <div class="gender-filter">
