--- a/app/views/gears/dashboard.html.erb
+++ b/app/views/gears/dashboard.html.erb
@@ -3,7 +3,7 @@
 	<ul class="categories">
 		<% Gear::CATEGORIES.each do |category| %>
 			<%= link_to gears_path(category: category[:name]) do %>
-				<div class="category" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.55), rgba(101, 24, 7, 0.19)), url(<%= category[:photo] %>)">
+				<div class="category" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.55), rgba(101, 24, 7, 0.19)), url(https://images.unsplash.com/photo-1565733362858-3c610e8044cc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);">
 					<li><h2><%= category[:name] %></h2></li>
 				</div>
 			<% end %>
