added css to listings and rentals page

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -37,8 +37,19 @@
 #avatar-drop-down {
   // display: none;
   position: relative;
+}
+
+#navbarDropdown {
   &:hover {
     cursor: pointer;
+  }
+}
+
+.nav-item {
+  .active {
+    color: white;
+    font-weight: bold;
+    transform: scale(1.1);
   }
 }
 
