--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,8 +1,16 @@
+<div class=container>
 <h1>All Listings</h1>
-<% @gears.each do |g| %>
-  <%= g.brand %>
-  <%= g.model %>
-  <%= link_to "Edit", edit_gear_path(g) %>
-<% end %>
-
+</div>
+<div class="container">
 <%= link_to "Add New Gear", new_gear_path %>
+  <div class="card-product">
+    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+    <div class="card-product-infos">
+    <% @gears.each do |g| %>
+      <h2><%= g.brand %></h2>
+      <p><%= g.model %><p>
+      <%= link_to "Edit", edit_gear_path(g) %>
+    <% end %>
+    </div>
+  </div>
+</div>
