--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,16 +1,19 @@
 <div class=container>
-<h1>All Listings</h1>
-</div>
-<div class="container">
-<%= link_to "Add New Gear", new_gear_path %>
-  <div class="card-product">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
-    <div class="card-product-infos">
-    <% @gears.each do |g| %>
-      <h2><%= g.brand %></h2>
-      <p><%= g.model %><p>
-      <%= link_to "Edit", edit_gear_path(g) %>
+  <h1>All Listings</h1>
+  </div>
+  <div class="container">
+  <%= link_to "Add New Gear", new_gear_path %>
+    <% if @gears.length > 1 %>
+      <div class="card-product">
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+        <div class="card-product-infos">
+          <% @gears.each do |g| %>
+            <h2><%= g.brand %></h2>
+            <p><%= g.model %><p>
+            <%= link_to "Edit", edit_gear_path(g) %>
+          <% end %>
+        </div>
+      </div>
     <% end %>
-    </div>
   </div>
 </div>
