--- a/app/assets/stylesheets/components/_form-inputs.scss
+++ b/app/assets/stylesheets/components/_form-inputs.scss
@@ -1,23 +1,3 @@
-.form-inputs {
-  width: 250px;
-  position: absolute;
-  top: 400px;
-  left: 50px;
-
-}
-
-.form-actions {
-  width: 250px;
-  position:absolute;
-  top: 600px;
-  left: 50px;
-}
-
-.form-links {
-  position:absolute;
-  top: 650px;
-  left: 50px;
-  a {
-  color: white;
-}
+a {
+  color: #ffffff;
 }
