--- a/app/views/gears/_gear-card.html.erb
+++ b/app/views/gears/_gear-card.html.erb
@@ -8,6 +8,6 @@
       <p> <%= gear.description %></p>
     </div>
     <h2 class="card-gear-pricing"> $<%=gear.price_per_day%></h2>
-    <img src="https://images.unsplash.com/photo-1492681290082-e932832941e6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1951&q=80" class="card-gear-user avatar-bordered" />
+    <img src="https://images.unsplash.com/photo-1492681290082-e932832941e6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1951&q=80" class="gear-renter" />
   </div>
 </div>
