Completed landing page

--- a/app/views/components/_sign_up.html.erb
+++ b/app/views/components/_sign_up.html.erb
@@ -15,10 +15,10 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Log in", class: "btn btn-primary"%>
+          <%= f.button :submit, "Log in", class: "btn btn-primary mb-3"%>
         </div>
         <div class="form-links">
-          <label for="sign-up" style="color: #ffffff;">New to SportsBnB?<%= render "devise/shared/links" %></label>
+          <label for="sign-up" style="color: #ffffff;">Don't have an account?<%= render "devise/shared/links" %></label>
         </div>
       <% end %>
     </div>
