--- a/app/views/gears/_form.html.erb
+++ b/app/views/gears/_form.html.erb
@@ -4,6 +4,6 @@
   <%= f.input :description %>
   <%= f.input :category, collection: ["Skiing", "Snowboarding", "Basketball", "Tennis", "Soccer", "Flag Football", "Hiking", "Rock Climbing", "Golf"].sort, input_html: { multiple: false } %>
   <%= f.input :price_per_day %>
-  <%= f.input :photo, as: :file %>
+  <%= f.input :photos, as: :file, input_html: { multiple: :true }%>
   <%= f.button :submit, "Create Listing", class: "btn btn-primary"%>
 <% end %>
