fixed dashboard and gear show page

--- a/app/views/gears/dashboard.html.erb
+++ b/app/views/gears/dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
-	<h2>What sports gear would you like to rent?</h2>
+<div class="container mt-5">
+	<h2 class="pl-5">What sports gear would you like to rent?</h2>
 	<%= render 'categories' %>
 </div>
