--- a/app/views/gears/show.html.erb
+++ b/app/views/gears/show.html.erb
@@ -1,6 +1,7 @@
-<div class="container" id="show-body">
-  <div class="show-images">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div class="container">
+  <div class="show-grid mt-5">
+    <div class="left-show">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -8,16 +9,16 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <%= image_tag "sb2.jpg", class: "d-block w-100"%>
+          <%= image_tag "sb2.jpg", class: "d-block w-100 h-100"%>
         </div>
         <div class="carousel-item">
-          <%= image_tag "sb1.jpg", class: "d-block w-100"%>
+          <%= image_tag "sb1.jpg", class: "d-block w-100 h-100"%>
         </div>
         <div class="carousel-item">
-          <%= image_tag "sb3.jpg", class: "d-block w-100"%>
+          <%= image_tag "sb3.jpg", class: "d-block w-100 h-100"%>
         </div>
         <div class="carousel-item">
-          <%= image_tag "sb4.jpg", class: "d-block w-100"%>
+          <%= image_tag "sb4.jpg", class: "d-block w-100 h-100"%>
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -28,19 +29,15 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
-    <div class="show-info">
-      <div class="show-title">
-        <h2><%= @gear.brand.upcase %></h2>
       </div>
-      <div class="show-info-description">
-        <h3><%= @gear.model.upcase %></h3>
-        <h4><%= @gear.category %></h4>
-        <p><%= @gear.description.capitalize %></p>
-        <p>£<%= @gear.price_per_day %> per day</p>
-      </div>
-      <%= link_to "Rent Now", new_gear_rental_path(@gear), class: "btn btn-primary rent-now-btn" %>
     </div>
-    <%#= link_to "Rent Now", %>
+    <div class="right-show">
+      <h3> <%=@gear.brand.upcase %></h3>
+      <h4> <%=@gear.model%></h4><br>
+      <h6> <%=@gear.description%></h6>
+      <h6>$<%=@gear.price_per_day%> per day</h6><br>
+      <%= link_to "Rent", new_gear_rental_path(@gear), class: "btn btn-secondary" %>
+    </div>
   </div>
+</div>
 
