--- a/app/assets/stylesheets/gears/_index.scss
+++ b/app/assets/stylesheets/gears/_index.scss
@@ -1,24 +1,5 @@
-
-.my-grid{
-  display: flex;
-  justify-content: space-around;
-
-
-
-  .left-wrap {
-    width: 20vw;
-    border: lightgrey 1px solid;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    height: 80vh;
-    padding-left: 30px;
-  }
-
-  .right-wrap {
-    width: 55vw;
-  }
-
+.left-wrap {
+  border: lightgrey 1px solid;
 }
 
 .size > input {
@@ -36,3 +17,8 @@
   top: -20px;
 }
 
+#favcolor {
+  background: none;
+  padding: 0;
+  border: none;
+}
