added margin to top of pages

--- a/app/views/gears/show.html.erb
+++ b/app/views/gears/show.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="show-grid mt-5">
+<div class="container mt-5">
+  <div class="show-grid">
     <div class="left-show">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
