--- a/app/views/gears/new.html.erb
+++ b/app/views/gears/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
   <div class="rental-details">
     <div class="create-banner">
       <h1>Post your Listing</h1>
