--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%= yield %>
   </body>
 
-  <script>
+<!--   <script>
      {/* nav bar active class */}
     let navBtns = document.querySelectorAll('.nav-item');
     for (let i = 0; i < navBtns.length; i++) {
@@ -25,5 +25,5 @@
         this.nextSibling.classList.toggle('active');
     })
   };
-</script>
+</script> -->
 </html>
