changed the styling on the index page

--- a/app/views/gears/index.html.erb
+++ b/app/views/gears/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <h2>Rent <%= params[:category] %> Gear</h2>
-  <div class="row align-items-start">
-    <div class="col-3 left-wrap p-4" style="text-overflow: ellipsis; overflow: hidden;">
+  <div class="row align-items-start mt-4">
+    <div class="col-3 left-wrap py-3" style="text-overflow: ellipsis; overflow: hidden;">
       <div class="gender-filter mb-3">
         <h5>Gender</h5>
         <form action="">
@@ -18,14 +18,14 @@
       <div class="color-filter mb-3">
         <h5>Color</h5>
         <form action="">
-          <input type="color" id="favcolor" name="favcolor" value="#ff0000">
-          <input type="color" id="favcolor" name="favcolor" value="#0000FF">
           <input type="color" id="favcolor" name="favcolor" value="#000000">
-          <input type="color" id="favcolor" name="favcolor" value="#FFFFFF"><br>
-          <input type="color" id="favcolor" name="favcolor" value="#49DC24">
+          <input type="color" id="favcolor" name="favcolor" value="#654321">
           <input type="color" id="favcolor" name="favcolor" value="#555F52">
+          <input type="color" id="favcolor" name="favcolor" value="#FFFFFF"><br>
+          <input type="color" id="favcolor" name="favcolor" value="#4b5320">
+          <input type="color" id="favcolor" name="favcolor" value="#0000FF">
           <input type="color" id="favcolor" name="favcolor" value="#24BEDC">
-          <input type="color" id="favcolor" name="favcolor" value="#E424F2">
+          <input type="color" id="favcolor" name="favcolor" value="#8b0000">
         </form>
       </div>
       <div class="size-filter">
