--- a/app/assets/stylesheets/components/_card-category.scss
+++ b/app/assets/stylesheets/components/_card-category.scss
@@ -1,4 +1,3 @@
-
 .category > li > h2 {
 	font-size: 20px;
 	color: #ffffff;
@@ -7,10 +6,9 @@
 .categories {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-gap: 20px;
+	grid-gap: 35px;
 	list-style: none;
-	padding: 20px 20px;
-	margin: 20px 20px;
+	padding: none;
 }
 
 .category {
@@ -22,4 +20,9 @@
 	padding: 30px 30px;
 	height: 140px;
 	box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+
+ul.categories {
+	padding: 0px;
 }
