--- a/app/views/gears/show.html.erb
+++ b/app/views/gears/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 py-5">
   <div class="show-grid">
     <div class="left-show">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
