--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,12 +1,16 @@
-<div class=container>
-  <h1>All Listings</h1>
+<div class="container mt-5 mb-4">
+  <h2>All listings</h2>
   </div>
   <div class="container">
   <%= link_to "Add New Gear", new_gear_path %>
     <% if @gears.present? %>
       <div class="card-product">
           <% @gears.each do |g| %>
-        <%= cl_image_tag g.photos.first.key, crop: :pad %>
+        <% if g.photos.any? %>
+          <%= cl_image_tag g.photos.first.key, crop: :pad %>
+        <% else %>
+          <%= image_tag 'https://kitt.lewagon.com/placeholder/cities/random' %>
+        <% end %>
         <div class="card-product-infos">
             <h2><%= g.brand %></h2>
             <p><%= g.model %><p>
