all listings fix

--- a/app/assets/stylesheets/components/_card-product-rented.scss
+++ b/app/assets/stylesheets/components/_card-product-rented.scss
@@ -42,3 +42,8 @@
 .card-product-rented .card-product-rented-infos {
   padding: 16px;
 }
+
+ .card-product-rented h4 {
+  font-size: 12px;
+  position: absolute;
+}
