--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,23 +1,25 @@
-<div class="container mt-5 mb-4">
+
+<div class="container mt-5">
   <h2>All listings</h2>
-  </div>
-  <div class="container">
-  <%= link_to "Add New Gear", new_gear_path %>
-    <% if @gears.present? %>
-      <div class="card-product">
-          <% @gears.each do |g| %>
-        <% if g.photos.any? %>
-          <%= cl_image_tag g.photos.first.key, crop: :pad %>
-        <% else %>
-          <%= image_tag 'https://kitt.lewagon.com/placeholder/cities/random' %>
-        <% end %>
-        <div class="card-product-infos">
-            <h2><%= g.brand %></h2>
-            <p><%= g.model %><p>
-            <%= link_to "Edit", edit_gear_path(g) %>
+  <div class="container mt-4">
+    <%= link_to "Add New Gear", new_gear_path%>
+    <% if @gears.length >= 1 %>
+      <% @gears.each do |g| %>
+        <div class="card-product-rented">
+          <% if g.photos.attached? %>
+            <%= cl_image_tag g.photos.first.key %>
+          <% else %>
+            <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
           <% end %>
+          <div class="card-product-infos">
+                <h2><%= g.brand %></h2>
+                <h3><%= g.model %></h3>
+                <p><%= g.description %></p>
+                <h3><%= g.price_per_day %> £ </h3>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
+  <p><%= link_to "Return to dashboard", root_path%></p>
 </div>
