--- a/app/assets/stylesheets/components/_card-product-rented.scss
+++ b/app/assets/stylesheets/components/_card-product-rented.scss
@@ -34,8 +34,8 @@
   font-size: 12px;
   line-height: 1.4;
   opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   margin-left: 5px;
 }
 
