Updated return to dashboard path to root

--- a/app/views/users/rented.html.erb
+++ b/app/views/users/rented.html.erb
@@ -21,5 +21,5 @@
       <% end %>
     <% end %>
   </div>
-  <p><%= link_to "Return to dashboard", dashboard_path%></p>
+  <p><%= link_to "Return to dashboard", root_path%></p>
 </div>
